--- a/public/assets/css/color_green.css
+++ b/public/assets/css/color_green.css
@@ -7,16 +7,16 @@
 */
 
 .title-underline-base-color {
-    border-color: #33cb98;
+    border-color: #02cc7e;
 }
 .title-underline-thick-base-color {
-    border-color: #33cb98;
+    border-color: #02cc7e;
 }
 .title-sideline-base-color:before {
-    background-color: #33cb98;
+    background-color: #02cc7e;
 }
 .title-strikethrough-base-color:before {
-    background-color: #33cb98;
+    background-color: #02cc7e;
 }
 
 
@@ -25,7 +25,7 @@
 */
 
 .text-base-color {
-    color: #33cb98 !important;
+    color: #02cc7e !important;
 }
 
 
@@ -35,7 +35,7 @@
 
 .text-hover-base-color:hover,
 .text-hover-base-color:focus {
-    color: #33cb98 !important;
+    color: #02cc7e !important;
 }
 
 
@@ -44,7 +44,7 @@
 */
 
 .bg-base-color {
-    background-color: #33cb98 !important;
+    background-color: #02cc7e !important;
 }
 
 
@@ -53,7 +53,7 @@
 */
 
 .bg-hover-base-color:hover {
-    background-color: #33cb98 !important;
+    background-color: #02cc7e !important;
 }
 
 
@@ -62,7 +62,7 @@
 */
 
 .border-base-color {
-    border-color: #33cb98 !important;
+    border-color: #02cc7e !important;
 }
 
 
@@ -71,22 +71,22 @@
 */
 
 .btn.btn-base-color {
-    background-color: #33cb98;
+    background-color: #02cc7e;
 }
 .btn.btn-base-color.btn-hover-transparent:hover {
-    border-color: #33cb98;
-    color: #33cb98;
+    border-color: #02cc7e;
+    color: #02cc7e;
 }
 .btn.btn-outline-base-color {
-    border-color: #33cb98;
-    color: #33cb98;
+    border-color: #02cc7e;
+    color: #02cc7e;
 }
 .btn.btn-outline-base-color:hover {
-    background-color: #33cb98;
+    background-color: #02cc7e;
 }
 .btn.btn-outline-base-color.btn-hover-transparent:hover,
 .btn.btn-outline-base-color.btn-hover-transparent:focus {
-    color: #33cb98;
+    color: #02cc7e;
 }
 
 
@@ -95,7 +95,7 @@
 */
 
 .pace .pace-progress {
-    background-color: #33cb98;
+    background-color: #02cc7e;
 }
 
 
@@ -106,7 +106,7 @@
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
-    background-color: #33cb98 !important;
+    background-color: #02cc7e !important;
 }
 
 
@@ -117,7 +117,7 @@
 .nav.nav-pills.nav-stacked > li.active > a,
 .nav.nav-pills.nav-stacked > li.active > a:hover,
 .nav.nav-pills.nav-stacked > li.active > a:focus {
-    background-color: #33cb98;
+    background-color: #02cc7e;
     color: #ffffff;
 }
 
@@ -127,7 +127,7 @@
 */
 
 .panel-group .panel.active .panel-heading {
-    background-color: #33cb98;
+    background-color: #02cc7e;
 }
 
 
@@ -136,7 +136,7 @@
 */
 
 .countdown .clock-item {
-    background-color: #33cb98;
+    background-color: #02cc7e;
 }
 
 
@@ -145,7 +145,7 @@
 */
 
 .pricing ul > li.check-mark:before {
-    background-color: #33cb98;
+    background-color: #02cc7e;
 }
 
 
@@ -154,6 +154,6 @@
 */
 
 .timeline-item.highlight:before {
-    background-color: #33cb98;
-    border: #33cb98;
+    background-color: #02cc7e;
+    border: #02cc7e;
 }
